tests/machine/x/c/order_by_map.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/order_by_map.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/order_by_map.c:75:33: error: ‘x’ undeclared (first use in this function)
   75 |   map_string_int_put(&_t2, "a", x.a);
      |                                 ^
/workspace/mochi/tests/machine/x/c/order_by_map.c:75:33: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/order_by_map.c:90:18: error: invalid operands to binary > (have ‘map_string_int’ and ‘map_string_int’)
   90 |       if (_t6[i] > _t6[j]) {
      |           ~~~~~~ ^ ~~~~~~
      |              |        |
      |              |        map_string_int
      |              map_string_int
/workspace/mochi/tests/machine/x/c/order_by_map.c:101:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘list_dataItem’ [-Wformat=]
  101 |   printf("%d\n", sorted);
      |           ~^     ~~~~~~
      |            |     |
      |            int   list_dataItem

   1: #include <stdio.h>
